--- a/preguntas_frecuentes.html
+++ b/preguntas_frecuentes.html
@@ -58,7 +58,7 @@
                     </div>
                     <div class="text-justify">                    
                                 <h4><strong class="reveal">¿Puedo visualizar mis cámaras en más de un smart phone?</strong></h4>
-                                <p class="reveal2">Claro que si, inclusive si cambias de celular puedes configurarlo en este sin costo sin aún estas dentro de tu periodo de garantía</p>
+                                <p class="reveal2">Claro que si, inclusive si cambias de celular puedes configurarlo en este sin costo si aún estas dentro de tu periodo de garantía</p>
                                 <hr class="hr2 reveal3">
                     </div>
                 </div>
