--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <div class="col-12 pt-5 pb-5">
             <h3 class="pt-2 sombra fuente" id="sombra">LA TRANQUILIDAD NO TIENE PRECIO</h3>
           </div>
-          <div class="col-12 text-center scroll">
+          <div class="col-12 text-center">
             <p class="lead pb-5">Protege a tus seres queridos, a cualquier hora y en cualquier lugar</p>
             <hr class="hr1 p-3">
           </div>
